--- a/game.html
+++ b/game.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <div class="game-container">
+
         <div id="bee-info-card" class="bee-info-card">
-            <div id="bee-type" class="bee-type">Bee Type: -</div>
-            <div id="bee-health" class="bee-health">Health: -</div>
-            <img id="bee-img" class="bee-img" src="" alt="Bee Image" />
-            <div id="bee-damage" class="bee-damage">Damage: -</div>
+            <div id="welcome-message" class="welcome-message">Welcome to the Bee Game! Please press the "Hit a Bee" button.</div>
+            <div id="bee-info-wrapper" class="bee-info-wrapper">
+                <div id="bee-type" class="bee-type">Bee Type: -</div>
+                <div id="bee-health" class="bee-health">Health: -</div>
+                <img id="bee-img" class="bee-img" src="" alt="Bee Image" />
+                <div id="bee-damage" class="bee-damage">Damage: -</div>
+            </div>
         </div>
 
     <div class="hive-health-container">
